fixed imaged stretch issue and font color in leaderboard page

--- a/src/components/Leaderboards/LeaderboardsRankCards.module.scss
+++ b/src/components/Leaderboards/LeaderboardsRankCards.module.scss
@@ -22,10 +22,24 @@
       background: linear-gradient(
         180deg,
         rgba(12, 27, 34, 0) 0%,
-        rgba(12, 27, 34, 0.9) 100%
+        rgba(12, 27, 34, 0.7) 100%
       );
       z-index: 1;
       width: 100%;
+      left: 0;
+    }&::after{
+        content: '';
+        position: absolute;
+        top: -1px;
+        left: 0;
+        min-height: 199px;
+        background: linear-gradient(
+          180deg,
+          rgba(12, 27, 34, 0.6) 0%,
+          rgba(12, 27, 34, 0) 40%,
+        );
+        z-index: 1;
+        width: 100%;
     }
     > span {
       width: 100% !important;
@@ -35,6 +49,7 @@
       position: absolute;
       top: 24px;
       left: 32px;
+      z-index: 99 !important;
       h4 {
         @include font-lg-neuropolitical-normal;
         font-size: 32px;
@@ -46,7 +61,7 @@
           font-size: 18px;
           line-height: 19.2px;
           margin-left: 8px;
-          color: #ffffff;
+          color: white;
         }
       }
     }
@@ -76,6 +91,10 @@
           font-size: 16px !important;
         }
       }
+    }
+    .image {
+      width: 100%;
+      object-fit: cover;
     }
   }
 }
